--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@solana/web3.js": "^1.95.3",
     "bn.js": "^5.2.1",
+    "bs58": "^6.0.0",
     "chalk": "^5.3.0",
     "discord.js": "^14.16.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "grammy": "^1.30.0",
+    "jito-js-rpc": "^0.1.0",
     "postgres": "^3.4.4",
     "socket.io-client": "^4.8.0",
     "tsx": "^4.19.1",
