--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@ KEYPAIR_ENCRYPTION_IV=
 DATABASE_URL=
 DISCORD_BOT_TOKEN=
 TELEGRAM_BOT_TOKEN=
-HELIUS_RPC_URL=
+RPC_URL=
 JITO_PAYER_KEYPAIR=
 API_PORT=
 HTTPS_KEY_PATH=
